# dynamic_obstacle_avoidance_layers

./: CMakeLists.txt  costmap_plugins.xml  package.xml
cfg/: CustomLayer.cfg  CustomLayerDynamic.cfg  CustomLayerStatic.cfg  ojauhfe
include/dynamic_obstacle_avoidance_layers/: boats_from_lidar.h  custom_layer_dynamic.h  custom_layer_static.h  social_layer.h
include/social_navigation_layers/: boats_from_lidar.h  custom_layer.h  custom_layer_dynamic.h  custom_layer_static.h  gh  proxemic_layer.h  social_layer.h
msg/: Boat.msg  Boats.msg
nodes/: boat_velocity_tracker.py  boats_from_lidar.cpp  boats_from_lidar.cpp~  boats_from_lidar.py
src/: custom_layer.cpp  custom_layer_dynamic.cpp  custom_layer_static.cpp  proxemic_layer.cpp  social_layer.cpp
