<package format="2">
  <name>dynamic_obstacle_avoidance_layers</name>
  <version>0.3.2</version>
  <description>
  Plugin-based layers for the navigation stack that 
  implement various obstacle detection and prediction methods
  </description>
  <author email="j.geijsberts@student.tue.nl">Josja Geijsberts</author>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>kalman_filter</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
